--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "format": "prettier .  --write"
     },
     "dependencies": {
+        "@formkit/themes": "^1.0.0-beta.8",
+        "@formkit/vue": "^1.0.0-beta.8",
         "@headlessui/vue": "^1.5.0",
         "@vueuse/core": "^8.2.5",
         "@vueuse/integrations": "^8.2.5",
