--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
     "extends": "@vue/tsconfig/tsconfig.web.json",
-    "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/theme.ts"],
+    "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/theme.ts", "src/locales/*.json"],
     "exclude": ["src/**/__tests__/*"],
     "compilerOptions": {
         "composite": true,
