--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,13 @@
 {
     "extends": "@vue/tsconfig/tsconfig.web.json",
-    "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/theme.ts", "src/locales/*.json"],
+    "include": [
+        "env.d.ts",
+        "src/**/*",
+        "src/**/*.vue",
+        "src/theme.ts",
+        "src/locales/*.json",
+        "formkit.config.ts"
+    ],
     "exclude": ["src/**/__tests__/*"],
     "compilerOptions": {
         "composite": true,
