lint and format on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,9 +16,9 @@
     // },
 
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    // "prettier.configPath": "",
     "eslint.probe": ["javascript", "javascriptreact", "vue"],
     "editor.formatOnSave": false,
     // Runs Prettier, then ESLint
-    "editor.codeActionsOnSave": ["source.formatDocument", "source.fixAll.eslint"]
+    "editor.codeActionsOnSave": ["source.formatDocument", "source.fixAll.eslint"],
+    "i18n-ally.keystyle": "nested"
 }
