--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,6 @@
         "dbaeumer.vscode-eslint",
         "vue.volar",
         "vue.vscode-typescript-vue-plugin",
-        "austenc.tailwind-docs"
+        "bradlc.vscode-tailwindcss"
     ]
 }
