--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,8 @@
     "i18n-ally.localesPaths": ["src/locales"],
 
     // This setting is used to catch tailwind in .ts files without html.
-    "tailwindCSS.experimental.classRegex": [
-        "/\\*\\s*tw\\s*\\*/\\s*'([^']*)'",
-        "/\\*\\s*tw\\s*\\*/\\s*\"([^\"]*)\""
-    ],
+    // Actually in all strings
+    "tailwindCSS.experimental.classRegex": ["\\s+\"([^\"]*)\""],
 
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "eslint.probe": ["javascript", "javascriptreact", "vue"],
