--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
         "format": "prettier .  --write"
     },
     "dependencies": {
-        "@formkit/themes": "^1.0.0-beta.8",
-        "@formkit/vue": "^1.0.0-beta.8",
+        "@formkit/themes": "^1.0.0-beta.9",
+        "@formkit/vue": "^1.0.0-beta.9",
         "@headlessui/vue": "^1.6.4",
         "@vueuse/core": "^8.6.0",
         "@vueuse/integrations": "^8.6.0",
-        "axios": "^0.26.1",
+        "axios": "^0.27.2",
         "pinia": "^2.0.13",
         "uuid": "^8.3.2",
         "vue": "^3.2.31",
         "vue-i18n": "^9.1.9",
-        "vue-router": "^4.0.14"
+        "vue-router": "^4.0.14",
+        "typescript-axios": "file:gen/api"
     },
     "devDependencies": {
         "@intlify/vite-plugin-vue-i18n": "^3.4.0",
