--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,9 +6,8 @@ services:
         build:
             context: .
             args:
-                - NODE_VERSION=lts-alpine
-                - NGINX_VERSION=stable-alpine
+                - NODE_VERSION=${ENV_NODE_VERSION}
         volumes:
-            - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}${APP_CODE_CONTAINER_FLAG}
+            - ${ENV_APP_CODE_PATH_HOST}:${ENV_APP_CODE_PATH_CONTAINER}${ENV_APP_CODE_CONTAINER_FLAG}
         ports:
-            - "${NGINX_HOST_HTTP_PORT}:80"
+            - "${ENV_NGINX_HOST_HTTP_PORT}:80"
